# kinect_doa

./: CMakeLists.txt  README.md  package.xml
firmware/: firmware.ino
launch/: kinect_doa.launch
src/: KinectDOA.cpp  KinectDOA.h  kinect_doa_node.cpp  servo_node.cpp
